@@ -40,7 +40,7 @@ This approach is originally due to synss' script from
 	http://forums.gentoo.org/viewtopic-t-465367-highlight-.html
 In that forum thread you can also ask for help about this project.
 
-For some mount-points different rules than "resquash and delete on umount"
+For some mount points different rules than "resquash and delete on umount"
 might be desired (see the examples section below), and moreover,
 it might be necessary to override these rules temporarily.
 For such things a powerful user interface is provided.
@@ -50,6 +50,9 @@ If the Gentoo portage tree /usr/portage is compressed with squashmount
 the required disk space is only about 50 MB (instead of about 180 MB,
 the actual space requirement depending essentially on the filesystem),
 and usually the access is even faster.
+
+It is possible to combine squashmount with portage's sync-type = squashdelta
+to mount the gentoo repository writable.
 
 Requirements
 ============
@@ -150,8 +153,15 @@ is removed accidentally anyway.
 If you use find_cruft, you might want to copy the content of
 etc/find_cruft.d to /etc/find_cruft.d and adapt it to your needs.
 
+If you plan to use portage's sync-type = squashdelta, you might want to copy
+the content of etc/portage/repo.postsync.d to /etc/portage/repo.postsync.d
+Note that the hook-file in this directory treats the mount point "gentoo"
+specially! See the example configuration in etc/squashmount.pl how to
+setup an appropriate mount point "gentoo" for this setting.
+
 In all cases you have to copy etc/squashmount.pl to /etc/squashmount.pl
-and adapt it to your need! This is the essential point of squashmount!
+and adapt it to your need! This is an essential point of squashmount,
+and it is impossible to use squashmount without setting up the configuration.
 
 
 Some Examples
@@ -164,24 +174,25 @@ on start and
 on shutdown (at a time when the local filesystems are already/still mounted).
 The provided installation files for systemd and openrc do just this.
 
-This will cause all configured mount-points to be mounted/umounted
+This will cause all configured mount points to be mounted/umounted
 correspondingly. When umounting, by default the modified data is
 recompressed into the squash-files (but this can be customized).
 
-The configuration of the mount-points happens in the file /etc/squashmount.pl
+The configuration of the mount points happens in the file /etc/squashmount.pl
 This is a perl file, so you can use perl code in this file to source other
 files at your discretion.
 
 The provided example configuration file etc/squashmount.pl is rather
-realistic if you are a gentoo user: It provides the following mount-points
+realistic if you are a gentoo user: It provides the following mount points
 
-(a) guest:    A guest user's home directory /home/guest
-(b) tex:      The installed files from texlive /usr/share/texmf-dist
-(c) portage:  The gentoo portage tree /usr/portage (main package database)
-(d) db:       The gentoo installed files   /var/db
-[further mount-points are in the config-file but not listed here].
+(a)  guest:    A guest user's home directory /home/guest
+(b)  tex:      The installed files from texlive /usr/share/texmf-dist
+(c1) portage:  The gentoo repository /usr/portage
+(c2) gentoo:   The gentoo repository when using sync-type = squashdelta
+(d)  db:       The gentoo installed files /var/db
+[further mount points are in the config-file but not listed here].
 
-For all the mount-points it is reasonable to use squashmount with them for
+For all the mount points it is reasonable to use squashmount with them for
 different reasons:
 
 (a) The guest-user should be able to modify data in /home/guest, but its
@@ -192,12 +203,17 @@ home directory which the user sees; see below how to do this).
 (b) The tex directory is huge, and it saves considerable space to keep it
 compressed on disk.
 
-(c) Keeping the portage directory compressed does not only save an enormous
+(c1) Keeping the portage directory compressed does not only save an enormous
 amount of disk space but actually also speeds up portage considerable,
 because the disk access is faster on a single (squashed) file.
 Moreover, after changes with eix --sync you might want to compare the
 new files with previous versions in the squashed file which you can still
 access when you use squashmount.
+
+(c2) When you prefer to use portage's sync-type = squashdelta, you already
+have the advantage of a compressed portage tree. However, you might want to
+use squashmount to make this portage tree writable (e.g. in order to
+temporarily fix a broken Manifest file locally).
 
 (d) The db directory is short but its data is very sensible and the
 number files is huge: Keeping it in a compressed file gives a lot
@@ -210,11 +226,12 @@ the example configuration:
 1. For (a), it is obviously necessary to use a different treatment:
    Normally, the squash-file should not be generated, and the temporary data
    should be removed.
+   A similar remark holds for (c2).
 
 2. For (d), squashmount will keep a backup even of the squash-file for
    the db directory.
 
-3. squashing of (c) and (d) should happen only when a certain
+3. squashing of (c1) and (d) should happen only when a certain
    threshold of changes to the data is reached.
    The modified data will survive the reboot even if it is not resquashed,
    but it takes more diskspace of course, and there is no readonly version of
@@ -247,7 +264,7 @@ but you want to reboot urgently, just call
 	squashmount --no-squash set
 
 before rebooting.
-Conversely, if you want to squash the portage mount-point despite its
+Conversely, if you want to squash the portage mount point despite its
 threshold is not reached (e.g. because you plan to make an experimental
 change which you plan to undo later), you can call
 
